--- a/src/styles.less
+++ b/src/styles.less
@@ -11,3 +11,19 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-
 .complete {
     color: green;
 }
+
+//Override btn class for timeline scheduler 
+.timeline-btn {
+    height: initial !important;
+}
+td.text-center {
+    background-color: #f4f3f8;
+}
+.item-success {
+    background-color: #28a745 !important;
+    border-color: #28a745 !important;
+}
+.item-warning {
+    background-color: #dc3545 !important;
+    border-color: #dc3545 !important;
+}
