--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,13 +6,13 @@
     </button>
     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item active">
-            <a class="nav-link active" routerLink="/">Dashboard</a>
+        <li class="nav-item">
+            <a class="nav-link" routerLink="/">Dashboard</a>
         </li>
         <li class="nav-item">
         <a class="nav-link" routerLink="/projects">Projects</a>
         </li>
-        <li class="nav-item">
+        <!--<li class="nav-item">
           <a class="nav-link" routerLink="/">Tasks</a>
         </li>
         <li class="nav-item">
@@ -26,7 +26,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/">Settings</a>
-        </li>
+        </li>-->
       </ul>
     </div>
     <!--Notifications-->
@@ -49,7 +49,7 @@
     <div class="notification-dropdown" *ngIf="notificationClicked">
       <div class="notification-container">
         <div *ngIf="!newNotifications">No new notifications.</div>
-        <div *ngIf="newNotifications">Notification 1 <span class="material-icons" (click)="notificationClosed()">close</span></div>
+        <div *ngIf="newNotifications" class="notification">Test Notification 1 <span class="material-icons" (click)="notificationClosed()">highlight_off</span></div>
       </div>
     </div>
     <!-- User Menu Dropdown -->
