--- a/src/app/navbar/navbar.component.less
+++ b/src/app/navbar/navbar.component.less
@@ -28,7 +28,7 @@
         } 
     }
     .user-menu-dropdown {
-        background-color: rgba(255,255,255,.7);
+        background-color: rgba(255,255,255,.9);
         position: absolute;
         right: 0;
         top: 100%;
@@ -45,13 +45,15 @@
         }
     }
     .notification-dropdown {
-        background-color: rgba(255,255,255,.7);
+        background-color: rgba(255,255,255,.9);
         position: absolute;
         top: 100%;
         left: 0;
         width: 100%;
+        z-index: 1;
         .notification-container {
             .notification {
+                margin: 20px;
                 span {
                     vertical-align: text-bottom;
                 }
