--- a/src/app/projects/projects.component.less
+++ b/src/app/projects/projects.component.less
@@ -92,7 +92,10 @@
 @media(max-width:991px){
     .container {
         .members-container {
-            width: 55%;
+            width: 100%;
+        }
+        .summary-container {
+            width: 100%;
         }  
     }
 }
