--- a/src/app/user-dashboard/user-dashboard.component.less
+++ b/src/app/user-dashboard/user-dashboard.component.less
@@ -42,6 +42,21 @@
         padding: 15px;
     }
 }
+@media(max-width:487px) {
+    .dashboard-container {
+        .total-row {
+            .item-average-container {
+                .item-average {
+                    width: 40%;
+                    .item-label {
+                        font-size: .9rem;    
+                    }
+                    
+                }
+            }
+        }
+    }
+}
 @media(max-width: 991.98px) {
     .widget {
         width: 100% !important;
