--- a/src/styles.less
+++ b/src/styles.less
@@ -27,3 +27,43 @@ td.text-center {
     background-color: #dc3545 !important;
     border-color: #dc3545 !important;
 }
+.fadeIn {
+    animation: fadeIn 1s forwards;
+}
+.fadeOut {
+    animation: fadeOut 1s forwards;
+}
+.loader {
+    animation: loader 1s linear infinite;
+    margin: auto;
+    border: 16px solid #cdcdcd;
+    border-radius: 50%;
+    border-top: 16px solid rgb(89,116,255);
+    width: 150px;
+    height: 150px;
+}
+/* Animations */
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+@keyframes loader {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
